# ROSProjects

sc4253_asgn3/: CMakeLists.txt  package.xml
sc4253_asgn3/scripts/: ccik.py
sc4253_asgn4/: CMakeLists.txt  package.xml
sc4253_asgn4/scripts/: mp.py  mp_ik.py
sc4253_asgn5/: CMakeLists.txt  package.xml
sc4253_asgn5/scripts/: estimator.py  estimator_particlefilter.py
