<?xml version="1.0"?>
<package>
  <name>sc4253_asgn3</name>
  <version>0.0.0</version>
  <description>The sc4253_asgn3 package</description>

  <maintainer email="siddharth@todo.todo">siddharth</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend> 


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdfdom_py</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdfdom_py</run_depend>
  <run_depend>message_runtime</run_depend> 



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
